fix: Packages. docker build scripts, yarn version
