# docs/OpenApi.json
@@ -183,6 +183,20 @@
         }
       }
     },
+    "/": {
+      "get": {
+        "description": "Get a response to determine if the service is running",
+        "tags": ["Health"],
+        "responses": {
+          "200": {
+            "description": "The package name and version that's running this service",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/components/schemas/HealthResponse" } }
+            }
+          }
+        }
+      }
+    },
     "/password/{email}": {
       "get": {
         "description": "Send a request to retrieve a temporary reset link",
@@ -216,20 +230,6 @@
         "responses": {
           "200": { "$ref": "#/components/responses/200Null" },
           "400": { "$ref": "#/components/responses/400BadRequest" }
-        }
-      }
-    },
-    "/": {
-      "get": {
-        "description": "Get a response to determine if the service is running",
-        "tags": ["Ping"],
-        "responses": {
-          "200": {
-            "description": "The package name and version that's running this service",
-            "content": {
-              "application/json": { "schema": { "$ref": "#/components/schemas/PingMarkResponse" } }
-            }
-          }
         }
       }
     },
@@ -637,6 +637,23 @@
           }
         ]
       },
+      "IHealthResponse": {
+        "type": "object",
+        "properties": {
+          "mark": { "type": "integer", "format": "int64", "example": 1591227886882 },
+          "application": { "type": "string", "nullable": true, "example": "node-user-service" },
+          "version": { "type": "string", "nullable": true, "example": "0.9.7" }
+        }
+      },
+      "HealthResponse": {
+        "allOf": [
+          { "$ref": "#/components/schemas/IResponseData" },
+          {
+            "type": "object",
+            "properties": { "data": { "$ref": "#/components/schemas/IHealthResponse" } }
+          }
+        ]
+      },
       "IJwtPayload": {
         "type": "object",
         "properties": {
@@ -649,23 +666,6 @@
           "email": { "type": "string" },
           "publicKey": { "type": "string" }
         }
-      },
-      "IPingMark": {
-        "type": "object",
-        "properties": {
-          "mark": { "type": "integer", "format": "int64", "example": 1591227886882 },
-          "application": { "type": "string", "nullable": true, "example": "node-user-service" },
-          "version": { "type": "string", "nullable": true, "example": "0.9.7" }
-        }
-      },
-      "PingMarkResponse": {
-        "allOf": [
-          { "$ref": "#/components/schemas/IResponseData" },
-          {
-            "type": "object",
-            "properties": { "data": { "$ref": "#/components/schemas/IPingMark" } }
-          }
-        ]
       },
       "IResponseData": {
         "properties": {
