# src/models/responses/IHealthResponse.ts
@@ -1,4 +1,4 @@
-export interface IPingMark {
+export interface IHealthResponse {
   mark: number;
   application?: string;
   version?: string;
