# src/models/responses/index.ts
@@ -1,6 +1,6 @@
 export * from "./IBearerToken";
 export * from "./IClaimModel";
-export * from "./IPingMark";
+export * from "./IHealthResponse";
 export * from "./IResponseData";
 export * from "./ISettingModel";
 export * from "./ITrackedEntityModel";
